test/parse/module/bad-import-not-param.txt
;;; ERROR: 1
(module (import "foo" "bar" (parump i32)))
(;; STDERR ;;;
parse/module/bad-import-not-param.txt:2:30: unexpected token "parump"
(module (import "foo" "bar" (parump i32)))
                             ^^^^^^
parse/module/bad-import-not-param.txt:2:37: syntax error, unexpected VALUE_TYPE, expecting TYPE or PARAM or RESULT
(module (import "foo" "bar" (parump i32)))
                                    ^^^
;;; STDERR ;;)
